hard-gists/5215968/run.log
=== Docker Run Log for 5215968 ===
Started at: Mi 29. Okt 15:29:26 CET 2025

[2025-10-29 15:29:27] START: Running container for 5215968
[2025-10-29 15:29:27] SUCCESS: Container 1628fb15113060fe5ce885ba8865063ec016e404e28cb297acb342390fc83f1a started for 5215968
=== Container logs for 5215968 ===
  File "/snippet.py", line 98
    print "ERROR: Make sure symbol and allocation lists have same number of elements.";
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5215968 ===
[2025-10-29 15:29:29] INFO: Container 1628fb15113060fe5ce885ba8865063ec016e404e28cb297acb342390fc83f1a has stopped
